labs/kyverno/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno-lab
  labels:
    kyverno-demo: "true"
